Fixed two typos

--- a/audio_signal_handling.ipynb
+++ b/audio_signal_handling.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The class uses exactly the same function to load the aufio file, but it encapsulates the sample rate as an attribute of the object. Since the sample rate is important for a lot of consecutive calculations (e.g. to determine the bin frequencies of a STFT) it is necessary to keep it around, but when using the `Signal` class, there is no need to pass it to all the functions which depend on the sample rate of the signal as a seprate variable. The `Signal` class takes care of this automatically (or: the other classes are smart enough to access it correctly).\n"
+    "The class uses exactly the same function to load the aufio file, but it encapsulates the sample rate as an attribute of the object. Since the sample rate is important for a lot of consecutive calculations (e.g. to determine the bin frequencies of a STFT) it is necessary to keep it around, but when using the `Signal` class, there is no need to pass it to all the functions which depend on the sample rate of the signal as a separate variable. The `Signal` class takes care of this automatically (or: the other classes are smart enough to access it correctly).\n"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As before, although the `Spectrogram` class expects a `STFT` instance as its only arument, we could also have passes any other data to it as long as a `STFT` object can be instantiated from it. This can be a `FramedSignal` or `Signal` instance or just a file name (or file handle).\n",
+    "As before, although the `Spectrogram` class expects a `STFT` instance as its only argument, we could also have passed any other data to it as long as a `STFT` object can be instantiated from it. This can be a `FramedSignal` or `Signal` instance or just a file name (or file handle).\n",
     "\n",
     "Additional keywords are passed accordingly, i.e. we can get the magnitude spectrogram of a file with a frame size of 2048 samples, a hop size of 200 samples, a FFT size of 4096 samples simple as:"
    ]
