Corrected two typos.

--- a/processors.ipynb
+++ b/processors.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Processor tutorial\n",
     "\n",
-    "This tutorial describes the data class / processor design pattern and guides you on how to turn existing code into a processing chain (with all the added benefits like single or parallal batch processing).\n",
+    "This tutorial describes the data class / processor design pattern and guides you on how to turn existing code into a processing chain (with all the added benefits like single or parallel batch processing).\n",
     "\n",
     "It assumes that you have finished/understood the [onset_detection notebook](./onset_detection.ipynb), since that notebook covers the code we want to transfer into a processing chain."
    ]
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember on how we obtained the `SuperFlux` onset detection function from an audio file (explicitely formulating every single step):"
+    "Remember on how we obtained the `SuperFlux` onset detection function from an audio file (explicitly formulating every single step):"
    ]
   },
   {
